# language-learn-mcp

./: Dockerfile  README.md  pyproject.toml
src/language_learn_mcp/: server.py  types.py
src/language_learn_mcp/config/: cefr.py  languages.py  pedagogy.py
src/language_learn_mcp/tools/: build_system_prompt.py  build_vocab_input.py  detect_drift.py  generate_exercise.py  get_language_config.py  get_mixing_config.py  get_reinforcement_note.py  score_response.py
src/language_learn_mcp/utils/: arabic.py  cefr.py
